# policyforge

./: .gitignore  Makefile  ci.yml  docker-compose.yml  eval.yml  push_to_hub.yml  pyproject.toml  quick_check.py  requirements.txt
configs/experiments/: smolvla_libero_lora.yaml
demo/: app.py  readme.md  requirements.txt
policyforge/: runner.py
policyforge/eval/: harness.py  metrics.py  reporter.py
policyforge/registry/: hub.py
policyforge/serve/: app.py  loader.py  schemas.py
policyforge/simulation/: env.py  recorder.py  rollout.py
policyforge/tracking/: __init__.py  base.py  mlflow_tracker.py  wandb_tracker.py
policyforge/train/: __init__.py  dataset.py  lora_config.py  smolvla_pusht_lora.yaml  trainer.py
scripts/: evaluate.py  push_to_hub.py  simulate.py  train.py
tests/: test_demo.py  test_eval.py  test_registry.py  test_runner.py  test_serve.py  test_simulation.py
train/: config.py  smolvla_libero_lora.yaml
