[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "policyforge"
version = "0.1.0"
description = "Production MLOps platform for VLA robot policy learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    # Config & utilities
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",

    # Experiment tracking — both supported, switch via config
    "wandb>=0.17.0",
    "mlflow>=2.14.0",

    # Inference server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",

    # Demo
    "gradio>=4.0.0",

    # HuggingFace Hub
    "huggingface_hub>=0.23.0",

    # Simulation video output
    "imageio[ffmpeg]>=2.34.0",

    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# NOTE: Install torch and lerobot separately — torch needs the right CUDA index URL.
# See Makefile `setup` target or README for the correct install commands.

[tool.setuptools.packages.find]
where = ["."]
include = ["policyforge*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"